feat: adição de endpoints de forma de pagamento